--- a/CYCUEG/team.html
+++ b/CYCUEG/team.html
@@ -31,7 +31,7 @@
         <h1 style="margin:auto;margin-bottom: 10px">OUR TEAM</h1>
         <div class="t1">
           <div class="img">
-            <img src="img/k.jpg" alt="" style="width: 100%;">
+            <img src="img/h.jpg" alt="" style="width: 100%;">
           </div>
           <div class="int">
             <p>組員名稱：黃薪誠</p>
