--- a/CYCUEG/team.html
+++ b/CYCUEG/team.html
@@ -31,7 +31,7 @@
         <h1 style="margin:auto;margin-bottom: 10px">OUR TEAM</h1>
         <div class="t1">
           <div class="img">
-            <img src="img/h.jpg" alt="" style="width: 100%;">
+            <img src="img/h.jpg" alt="" style="width: 100% ;position:relative;">
           </div>
           <div class="int">
             <p>組員名稱：黃薪誠</p>
@@ -52,7 +52,7 @@
         </div>
         <div class="t2">
           <div class="img">
-            <img src="img/k.jpg" alt="" style="width: 100%;">
+            <img src="img/k.jpg" alt="" style="width: 100%;position:relative">
           </div>
           <div class="int">
             <p>組員名稱：康宸源</p>
@@ -73,7 +73,7 @@
         </div>
         <div class="t2">
           <div class="img">
-            <img src="img/p.jpg" alt="" style="width: 100%;">
+            <img src="img/p.jpg" alt="" style="width: 100%;position:relative">
           </div>
           <div class="int">
             <p>組員名稱：潘冠宇</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="t1">
           <div class="img">
-            <img src="img/l.jpg" alt="" style="width: 100%;">
+            <img src="img/l.jpg" alt="" style="width: 100%;position:relative">
           </div>
           <div class="int">
             <p>組員名稱：劉松銘</p>
