--- a/CYCUEG/CYCUEG.html
+++ b/CYCUEG/CYCUEG.html
@@ -38,19 +38,16 @@ function closeNav() {
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
   <img src="img/c3.jpg" style="width:100%">
   <div class="text">通識自主學習</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
   <img src="img/t4.jpg" style="width:100%">
   <div class="text">通識認證</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
   <img src="img/f1.jpg" style="width:100%">
   <div class="text">風雅頌</div>
 </div>
@@ -89,8 +86,10 @@ function showSlides() {
   setTimeout(showSlides, 2000); 
 }
 </script>
-<br><br><br>
-<div class="h1">介紹影片</div><hr width="50%" >
+<div class="team">
+<h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體">介紹影片</h2>  <hr>
+<h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體">幕後花絮</h2>  <hr>
+</div>
 </body>
 <footer id="foot" >
   <br>
