--- a/CYCUEG/fys.html
+++ b/CYCUEG/fys.html
@@ -34,16 +34,32 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 </script>
-<nav class="nav"> 
+  <nav class="nav"> 
   <ul class="ul"> 
     <li><img src="img/f1.jpg" style="width:20%" class="img" alt=""></li> 
     <li><img src="img/f2.jpg" style="width:20%" class="img" alt=""></li> 
-    <li><img src="img/f3.jpg" style="width:20%" class="img" alt=""></li> 
-    <li><img src="img/f1.jpg" style="width:20%" class="img" alt=""></li> 
-    <li><img src="img/f2.jpg" style="width:20%" class="img" alt=""></li> 
-    <li><img src="img/f3.jpg" style="width:20%" class="img" alt=""></li> 
+    <li><img src="img/f3.jpg" style="width:20%" class="img" alt=""></li>
+    <li><img src="img/f5.jpg" style="width:20%" class="img" alt=""></li> 
   </ul> 
 </nav>
+<div class="team">
+<h2 style="margin:auto;margin-bottom: 20px;font-family:微軟正黑體;">風雅頌</h2> 
+<hr> 
+
+<img src="img/map.jpg" width="40%" style="float: left;" alt="">
+<div class="int2">活動地點位於右側真知教學大樓的二樓</div>
+<div class="int">風雅頌藝文廳為中原大學藝文欣賞的優雅空間，每周皆有兩場精彩的藝文活動有音樂表演、大師演講，為桃園中壢區帶來豐富的藝文活動，希望各位同學踴躍參加，為各位同學的生活中帶來新的色彩</div>
+
+<div style="float: left;">
+<h2 style="margin:auto;margin-bottom: 20px;font-family:微軟正黑體;">相關網站</h2> 
+<hr style="padding-right: 1380px;margin-bottom: 50px;">
+<a href="https://www.facebook.com/artssaloncycu/" style="text-decoration:none;">中原大學風雅頌藝文廳</a><br><br><br>
+<a href="https://cge.cycu.edu.tw/index.php/welcome/active_live/39" style="text-decoration:none;">中原大學通識教育中心</a>
+</div>
+
+
+
+</div> 
 
 
 </body>
