--- a/CYCUEG/CYCUEG.html
+++ b/CYCUEG/CYCUEG.html
@@ -89,10 +89,10 @@ function showSlides() {
 <div class="team">
 <h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體">介紹影片</h2>  <hr> <br><br>
 <video src="movie/movie.mp4" controls="controls" style="padding-bottom: 30px"></video>
-
+<img src="img/a1.jpg" width="20%" style="float: right">
 <h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體">幕後花絮</h2>  <hr> <br> <br>
 <video src="movie/movie-2.mp4" controls="controls"  ></video>
-
+<img src="img/a2.jpg" width="20%" style="float: right"><br>
 <h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體;padding-top: 30px;">背景音樂</h2>  <hr> <br>
   Two Steps From Hell -   Victory<br><br>
   黃渤 - 正道的<br><br>
