--- a/CYCUEG/CYCUEG.html
+++ b/CYCUEG/CYCUEG.html
@@ -88,10 +88,10 @@ function showSlides() {
 </script>
 <div class="team">
 <h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體">介紹影片</h2>  <hr> <br><br>
-<video src="movie/movie-2.mp4" controls="controls" style="padding-bottom: 30px"></video>
-<img src="img/a1.jpg" width="20%" style="float: right">
+<iframe width="960" height="570" src="https://www.youtube.com/embed/e6ZFkwsSJjk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-bottom: 30px;"></iframe>
+<img src="img/a1.jpg" width="25%" style="float: right">
 <h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體">幕後花絮</h2>  <hr> <br> <br>
-<video src="movie/movie-2.mp4" controls="controls"  ></video>
+<iframe width="960" height="570" src="https://www.youtube.com/embed/sq9t1aje_YQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <img src="img/a2.jpg" width="20%" style="float: right"><br>
 <h2 style="margin:auto;margin-bottom: 20px;font-family: 微軟正黑體;padding-top: 30px;">背景音樂</h2>  <hr> <br>
   Two Steps From Hell -   Victory<br><br>
