--- a/CYCUGE/team.html
+++ b/CYCUGE/team.html
@@ -115,7 +115,27 @@
         </div>
       </div>
 
+ <form action="mailto:lillian417cat@gmail.com" method="post" enctype="text/plain" accept-charset="UTF-8" class="team2" >
+           
+               
+                <div style="font-family:fantasy;text-align: center;font-size: 36px;font-weight: bold;">回饋表單</div>   <br>             
+                <div class="">
+                    <div style="font-family: 微軟正黑體;">姓名：</div>
+                    <div class=""><input type="text" name="name" style="width: 130px"></div>
+                </div>
 
+                <div  style="font-family: 微軟正黑體;">
+                    <div class="">Email：</div>
+                    <div class=""><input type="text" name="email" style="width: 130px"></div>
+                </div>           
+            <div  style="font-family: 微軟正黑體;">
+                <div class="">回饋：</div>
+                <div class=""><textarea name="description" style="width: 690px; height: 150px;overflow: auto;"></textarea></div>
+            </div>
+            <div class="">
+                <div class=""><input type="submit" name="submit" value="送出" class="button button1"> <input type="reset" value="重寫" class="button button2"/></div>
+            </div>
+        </form>
 
 <script>
 function openNav() {
@@ -128,6 +148,7 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 </script>
+
 
 </body>
 <footer id="foot" >
