--- a/myself/index.html
+++ b/myself/index.html
@@ -4,248 +4,7 @@
 
 <title>黃薪誠個人網站</title>
 <style>
-body {margin:0;}
-
-a {
-    text-decoration:none;
-    color:white
-}
-
-p{
-  -webkit-column-break-after: always;
-}
-
-.gotop{
-    position: fixed;
-    right: 0;
-    top:85%;
-    width:6em;
-    margin-top: 2em;
-}
-
-.title{
-  font-size: 28px;
-  padding-left: 10%;
-  font-family: fantasy;
-}
-
-.logo{
-  margin-left: 25%;
-  width: 50%;
-}
-
-.footer{
-  color: white;
-  font-family: fantasy;
-  font-size: 36px;
-  font-weight: bold;
-  margin-top: 100px;
-}
-
-
-.icon-bar {
-  width: 80%;
-  background-color: #555;
-  overflow: auto;
-  margin-left: 10%;
-  margin-bottom: 50px;
-}
-
-.icon-bar a {
-  float: left;
-  width: 20%;
-  text-align: center;
-  padding: 12px 0;
-  transition: all 0.3s ease;
-  color: white;
-  font-size: 36px;
-}
-
-.icon-bar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: #555;
-}
-
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-
-}
-
-
-.text {
-  color: #f2f2f2;
-  font-size: 24px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-
-#myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-}
-
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
-  overflow-y:scroll;height:100%;
-}
-
-#myBtn {
-  width: 200px;
-  font-size: 18px;
-  padding: 10px;
-  border: none;
-  background: #000;
-  color: #fff;
-  cursor: pointer;
-}
-
-#myBtn:hover {
-  background: #ddd;
-  color: black;
-}
-
-
-
-.pic img{
-  transform:scale(1,1);transition:all 1s ease-out;
-}
-
-.pic img:hover{
-  transform:scale(1.2,1.2);
-}
-
-
-
-#container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100px;
-    }
-
-    .arrow {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      border-left: 2px solid orange;
-      border-bottom: 2px solid orange;
-      transform: rotate(135deg);
-      animation: toggle 0.6s alternate infinite;
-      margin-right: 50px;
-    }
-
-    @keyframes toggle {
-      to {
-        transform: translateY(30px) rotate(135deg);
-      }
-    }
-.container2 {
-  position: relative;
-  width: 50%;
-}
-
-.image2 {
-  opacity: 1;
-  display: block;
-  width: 250px;
-  transition: .5s ease;
-  backface-visibility: hidden;
-}
-
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 160px;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.container2:hover .image2 {
-  opacity: 0.3;
-}
-
-.container2:hover .middle {
-  opacity: 1;
-}
-
-.text2 {
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}
-
+  @import "css/myself.css";
 </style>
 </head>
 <body>
