--- a/myself/index.html
+++ b/myself/index.html
@@ -156,19 +156,24 @@ function showSlides() {
 <div style="columns: 2;column-gap: 0px;margin-left: 100px;">
  <div class="title" id="goal">目標</div>
   <hr width=80% style="margin-bottom:30px;">
-<p style="padding-left: 10%">
-▲增強自己的英文能力<br><br>
-一有空閒的時間就可以拿出來背增加自己的單字量。希望能在畢業前考取多益650分以上<br><br>
-▲暑期打工<br><br>
-藉由暑期打工開始累積社會經驗，盡量尋找跟資訊類有關的工作，順便了解現在業界的需求當作以後發展方向的參考。<br><br>
-▲拓展交友圈，充實自我<br><br>
-積極參與各種研習於講座充實自己。將興趣與生活作結合，為大學生活添上更豐富的色彩
-</p>
-
+  <p style="padding-left: 10%">
+  ▲增強自己的英文能力<br><br>
+  一有空閒的時間就可以拿出來背增加自己的單字量。希望能在畢業前考取多益650分以上<br><br>
+  ▲暑期打工<br><br>
+  藉由暑期打工開始累積社會經驗，盡量尋找跟資訊類有關的工作，順便了解現在業界的需求當作以後發展方向的參考。<br><br>
+  ▲拓展交友圈，充實自我<br><br>
+  積極參與各種研習於講座充實自己。將興趣與生活作結合，為大學生活添上更豐富的色彩
+  </p>
+  
+ <div class="title" >興趣</div>
+  <hr width=70% style="margin-right:20%;margin-bottom: 30px;">
+  <div style="padding-left: 10%;padding-bottom: 30px;">
+  打球,打電動,發現地方美食
+  </div>
  <div class="title" id="goal2"> 自我期許</div>
   <hr width=70% style="margin-right:20%;margin-bottom: 30px;" >
   <div style="padding-left: 10%;padding-bottom: 30px;">
-  必須要熟讀自己的專業科目才能在未來工作時時發揮自己的所長使自己在就業後不容易被取代
+  必須要熟讀自己的專業科目才能在未來工作時時發揮自己的所長
   </div>
 
 
