--- a/resume/index.html
+++ b/resume/index.html
@@ -16,8 +16,8 @@
 <body>
 	
 	<div class="hero-image">
-  <img src="img/myself.jpg">
-  <div class="hero-text">
+  <img src="img/myself.jpg" style="margin-top: 10px">
+  <div class="hero-text" >
     <h1 style="font-size:50px;padding-top: 80px;">我是黃薪誠</h1>
     <p>來自中原大學資管系</p>
     <h1 class="ml9">
@@ -92,34 +92,19 @@
     <br><br><br>
   </div>
    
-  <div class="container">
-  <h1>經歷</h1><br>
-  <ul class="timeline">
-    <li>
-      <div class="direction-r">
-        <div class="flag-wrapper">
-          <span class="hexa"></span>
-          <span class="flag">考取多張證照</span>
-          <span class="time-wrapper"><span class="time">高中</span></span>
-        </div>
-        <div class="desc"><img src="img/c1.jpg" width="60%"><img src="img/c3.jpg" width="60%"><img src="img/c2.jpg" width="60%"></div>
-      </div>
-    </li>
-
+  <div class="container" >  
+  <div style="columns: 2;column-gap: 0px;">
+  <p>  
+  <h1>學歷</h1><br>
+  <ul class="timeline" style="margin-left: -180px;">
 
     <li>
       <div class="direction-l">
         <div class="flag-wrapper">
           <span class="hexa"></span>
-          <span class="flag">企業概論</span>
-          <span class="time-wrapper"><span class="time">大一</span></span>
+          <span class="flag">潛龍國小</span>
+          <span class="time-wrapper"><span class="time">2006-2012</span></span>
         </div>
-        <div class="desc"> <div class="photobox photobox_type3">
-        <div class="photobox__previewbox">
-          <img src="img/cow.jpg" class="photobox__preview" alt="Preview">
-          <span class="photobox__label">牛人賣傘</span>
-        </div>
-      </div></div>
       </div>
     </li>
 
@@ -128,23 +113,70 @@
       <div class="direction-r">
         <div class="flag-wrapper">
           <span class="hexa"></span>
-          <span class="flag">後端網站架設</span>
-          <span class="time-wrapper"><span class="time">大二</span></span>
+          <span class="flag">凌雲國中</span>
+          <span class="time-wrapper"><span class="time">2012-2015</span></span>
         </div>
-        <div class="desc">
-              期末線上購物網站 Make A Dream 販賣抽獎卷
-              <div class="profilebox profilebox1" style="background-image: url('img/final.jpg');">
-                <div class="SocialIcons">
-                    <a href="https://MichelleTseng2.github.io/terminal"><img src="img/github.png" width="80%" style="margin-top: 5px;"></a>
-                </div>
-                <div class="profileInfo">
-                    <a href="https://MichelleTseng2.github.io/terminal"><h3>Make A Dream</h3></a>
-                </div>
-              </div>
+      </div>
+    </li>
+
+    <li>
+      <div class="direction-l">
+        <div class="flag-wrapper">
+          <span class="hexa"></span>
+          <span class="flag">中壢高商</span>
+          <span class="time-wrapper"><span class="time">2015-2018</span></span>
+        </div>
+      </div>
+    </li>
+
+    <li>
+      <div class="direction-r">
+        <div class="flag-wrapper">
+          <span class="hexa"></span>
+          <span class="flag">中原大學</span>
+          <span class="time-wrapper"><span class="time">2018-now</span></span>
         </div>
       </div>
     </li>
   </ul>
+  </p>
+  <h1 style="margin-left: 30px">工作經驗</h1><br>
+    <div class="container2">
+   <img src="img/job.jpg" class="image" style="margin-left:40px;margin-top:20px">
+  <div class="middle">
+  <div class="text2">兒童碰碰車操作員</div>
   </div>
+  </div> 
+  </div>
+  </div>
+
+  <div class="container" >
+    <h1>作品</h1><br><br>
+    <div class="photobox photobox_type3">
+        <div class="photobox__previewbox" >
+          <img src="img/cow.jpg" class="photobox__preview" alt="Preview" >
+          <span class="photobox__label" >牛人賣傘</span>
+        </div>
+    </div>
+    <br><br><br>
+      <div class="profilebox profilebox1" style="background-image: url('img/final.jpg');">
+        <div class="SocialIcons">
+          <a href="https://github.com/MichelleTseng2/MichelleTseng2.github.io"><img src="img/github.png" width="80%" ></a>
+        </div>
+        <div class="profileInfo">
+          <a href="https://MichelleTseng2.github.io/terminal"><h3>Make A Dream</h3></a>
+      </div>
+
+      <div class="profilebox profilebox1" style="background-image: url('img/CYCUGE.jpg');margin-left:500px;margin-top:-5px;">
+        <div class="SocialIcons">
+          <a href="https://github.com/joseph1024/joseph1024.github.io"><img src="img/github.png" width="80%" "></a>
+        </div>
+        <div class="profileInfo">
+          <a href="https://joseph1024.github.io/CYCUGE/index.html"><h3>CYCUGE</h3></a>
+      </div>      
+
+  </div>
+
+
 </body>
 </html>
