--- a/final/pages/index.html
+++ b/final/pages/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
     <script src="../js/sign.js" ></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<style>
     @import "../css/menu.css";
 	</style>
@@ -36,6 +37,10 @@
 	  </nav>
 	</div>
     <div  class="btn from-left" onclick="document.getElementById('sign').style.display='block'" >Sign In/Sign Up</div>
+    <i class="fas fa-user"></i>
+    <i class="far fa-address-book"></i>
+    <i class="fas fa-sign-out-alt"></i>Sign Out
+    
 	<!--Sign in/Sign up-->
 	<div id="sign" class="login-wrap" >
         <div class="login-html">
@@ -51,8 +56,10 @@
                             <input id="user" type="text" class="input" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
                         </div>
                         <div class="group">
-                            <label for="pass" class="label">Password</label>
-                            <input id="pass" type="password" class="input" data-type="password" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
+                            <label for="user" class="label">Password</label>
+                            <input type="password" class="input" id="demo_input" onkeyup="value=value.replace(/[\W]/g,'') " onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">
+                            <i id="demo_img"  class="fa fa-eye ml-2"  onclick="hideShowPsw()" ></i>
+                            <i id="demo_img"  class="fas fa-eye-slash" onclick="hideShowPsw()"></i>
                         </div>
                         <div class="group">
                             <input type="submit" class="button" value="Sign In">
@@ -102,8 +109,21 @@
 
 
 
-
-
+<script type="text/javascript">
+    // 这里使用最原始的js语法实现，可对应换成jquery语法进行逻辑控制
+    var demoImg = document.getElementById("demo_img");
+    var demoInput = document.getElementById("demo_input");
+    //隐藏text block，显示password block
+    function hideShowPsw(){
+        if (demoInput.type == "password") {
+            demoInput.type = "text";
+            demo_img.class = "fas fa-eye-slash";
+        }else {
+            demoInput.type = "password";
+            demo_img.class = "fa fa-eye ml-2";
+        }
+    }
+</script>
 
 
 
