--- a/final/pages/index.html
+++ b/final/pages/index.html
@@ -33,7 +33,7 @@
           </nav>
         </div>
             <div  class="btn from-left" onclick="document.getElementById('sign').style.display='block'" >Sign In/Sign Up</div>
-            <table style="margin-top: 30px;float: left;">
+            <table  style="margin-top:30px;float: left">
                 <tr>
                     <td>
                         <div class="btn-group">
