--- a/final/pages/index.html
+++ b/final/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/menu.css";
+    @import "../css/title.css";
     @import "../css/index.css";
     </style>
 </head>
@@ -19,9 +19,9 @@
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
-                                <a href="pro1.html">Champio</a>
-                                <a href="pro2.html">Carhartt</a>
-                                <a href="pro3.html">Reebok</a>
+                                <a href="pro1.html">Champion</a>
+                                <a href="pro2.html">Dickies</a>
+                                <a href="pro3.html">NIKE</a>
                                 <a href="pro4.html">FILA</a>
                                 <a href="pro5.html">Vans</a>
                             </div>
@@ -128,25 +128,34 @@
     
     <!--main start-->
     <main>
+        <table  class="hrtable" >
+            <tr>
+                <td>
+                    <hr class="hrline"> 
+                </td>
+                <td width="20%" align="center">
+                    ANKLE SOCKS
+                </td>
+                <td>
+                    <hr class="hrline"> 
+                </td>
+            </tr>
+        </table>
+
         <div class="slideshow-container">
-
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="../img/show1.jpg" style="width:80%;height:600px">
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="../img/show2.jpg" style="width:80%;height:600px">
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="../img/show3.jpg" style="width:80%;height:600px">
-        </div>
-
-        </div>
-        <br>
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="../img/show1.jpg" style="width:80%;height:600px">
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="../img/show2.jpg" style="width:80%;height:600px">
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="../img/show3.jpg" style="width:80%;height:600px">
+            </div>
+        </div><br>
 
         <div style="text-align:center">
           <span class="dot"></span> 
@@ -154,8 +163,31 @@
           <span class="dot"></span> 
         </div>
 
-    </main>
+        <table  class="hrtable" >
+            <tr>
+                <td>
+                    <hr class="hrline"> 
+                </td>
+                <td width="20%" align="center">
+                    BEST SELLER
+                </td>
+                <td>
+                    <hr class="hrline"> 
+                </td>
+            </tr>
+        </table>
 
+        <div class="best" style="margin-left:380px">
+            <a href="#"><img src="../img/show1.jpg" class="bestimg"></a>
+            <a href="#"><img src="../img/show2.jpg" class="bestimg"></a>
+            <a href="#"><img src="../img/show3.jpg" class="bestimg"></a>
+        </div>
+        
+        <div class="best" style="margin-left:380px" align="center">
+            <a href="menu.html"><button class="shopbtn spbtn">SHOP ALL</button></a>
+        </div>    
+    </main>
+    <!--main end-->
 
 
     <!--footer start-->
@@ -166,7 +198,7 @@
                 <span class="letters">Have  Questions?</span>
               </span>
             </h1>
-            <hr  align="left">
+            <hr  align="left"><br>
             <i class="fas fa-map-marker-alt" "></i>&nbsp;200,Chung Pei Rd.,Chung Li,<br>&nbsp;&nbsp;&nbsp;Taiwan 32023, R.O.C.<br><br>
             <i class="fas fa-phone"></i>&nbsp;(03)2659999<br><br>
             <div class="link-2">
