--- a/final/pages/FAQ.html
+++ b/final/pages/FAQ.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/menu.css";
-    @import "../css/index.css";
+    @import "../css/title.css";
+    @import "../css/FAQ.css";
     </style>
 </head>
 <body>
@@ -19,9 +19,9 @@
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
-                                <a href="pro1.html">Champio</a>
-                                <a href="pro2.html">Carhartt</a>
-                                <a href="pro3.html">Reebok</a>
+                                <a href="pro1.html">Champion</a>
+                                <a href="pro2.html">Dickies</a>
+                                <a href="pro3.html">NIKE</a>
                                 <a href="pro4.html">FILA</a>
                                 <a href="pro5.html">Vans</a>
                             </div>
@@ -33,7 +33,7 @@
           </nav>
         </div>
             <div  class="btn from-left" onclick="document.getElementById('sign').style.display='block'" >Sign In/Sign Up</div>
-            <table style="margin-top: 30px;float: left;">
+            <table  style="margin-top:30px;float: left">
                 <tr>
                     <td>
                         <div class="btn-group">
@@ -128,10 +128,58 @@
     
     <!--main start-->
     <main>
+        <table  class="hrtable2" >
+            <tr>
+                <td>
+                    <hr class="hrline"> 
+                </td>
+                <td width="25%" align="center">
+                    Frequently Asked Questions
+                </td>
+                <td>
+                    <hr class="hrline"> 
+                </td>
+            </tr>
+        </table>
 
+        <div class="chat">
+            <div class="container">
+                <img src="../img/user.jpg" style="margin-top: 0px" >
+                <p>有瑕疵可以退貨嗎?</p>
+            </div>
 
+            <div class="container darker">
+                <img src="../img/logo.png" class="right">
+                <p style="padding-left: 120px;">如所購買的商品在商品鑑賞期內,若有商品品質問題·建議您申請退貨。<br><br>
+                1.因顯示器不同而產生的色差、皮料厚薄爭議(個人定義不同無法鑒別)織法、手感、衣服細節方面的問題不屬於品質瑕疵問題。<br><br>
+                2.因款式、顏色及個人主觀意願和喜好變化等因素申請退貨,不屬於商品瑕疵問題。</p>
+            </div>
+
+            <div class="container">
+                <img src="../img/user.jpg"  style="margin-top: 0px" >
+                <p>如何換貨?</p>
+            </div>
+
+            <div class="container darker">
+                <img src="../img/logo.png" class="right"> 
+                <p style="padding-left: 120px;">Socks不提供換貨服務。顧客如需更換商品,請按照退貨流程操作,並重新訂購。<br><br>
+                再次提醒您,猶豫期非試用期,若您收到商品經檢視後有任何不合意之處,請勿立即使用,並請依照退貨規定辦理退貨。<br><br>
+                當您申請退貨後・請主動向物流人員索取單據,並保留至退貨完成,以利日後查詢。</p>
+            </div>
+
+            <div class="container">
+                <img src="../img/user.jpg" style="margin-top: 0px"  >
+                <p>一定要有會員才能購買嗎?</p>
+            </div>
+
+            <div class="container darker">
+                <img src="../img/logo.png" class="right" style="margin-top: 20px">
+                <p style="padding-left: 120px;">沒錯一定要先申請成為會員後才可以進行購買也會有紅利點數的福利。</p>
+            </div>
+
+        </div>  
     </main>
-
+    <!--main end-->
 
 
     <!--footer start-->
@@ -142,7 +190,7 @@
                 <span class="letters">Have  Questions?</span>
               </span>
             </h1>
-            <hr  align="left">
+            <hr  align="left"><br>
             <i class="fas fa-map-marker-alt" "></i>&nbsp;200,Chung Pei Rd.,Chung Li,<br>&nbsp;&nbsp;&nbsp;Taiwan 32023, R.O.C.<br><br>
             <i class="fas fa-phone"></i>&nbsp;(03)2659999<br><br>
             <div class="link-2">
@@ -200,7 +248,6 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="../js/sign.js" ></script>
     <script src="../js/letters.js"></script>
-    <script src="../js/slideshow.js"></script>
 
 </body>
 </html>
